# VFXTextureLab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TESTER_SETUP.txt  THIRD_PARTY_NOTICES.md  UPDATE_NOTES.txt  VFXTextureLab-0.50.0-Windows-Packaging.patch  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.sh
docs/: 3D_PREVIEW.md  ADDING_NODES.md  ADJUSTMENTS.md  ANIMATION_PERFORMANCE.md  APERTURE_MORPHOLOGY.md  ARCHITECTURE.md  BLEND.md  CANVAS_EDITOR.md  COORDINATES_AND_DISTORTION.md  CURVES.md  CUSTOM_NODES.md  DIRECTIONAL_LIGHTING.md  DISTANCE_BEVEL.md  EDITOR_QOL.md  EROSION_PREVIEW_PERFORMANCE.md  EVALUATION_FEEDBACK.md  EVALUATION_INSPECTOR.md  EXPORTING.md  FLOOD_FILL.md  FOUNDATIONAL_NOISE_EXPANSION.md  GEOMETRY_BAKING.md  GEOMETRY_FOUNDATION.md  GEOMETRY_SHAPING.md  GEOMETRY_TOOLKIT.md  GPU_PREVIEW_PERFORMANCE.md  GRADIENT_MAP_COLOUR_SPACE.md  GRAPH_ASSETS.md  GRAPH_EXPLORER.md  GRAPH_FUSION.md  GRAPH_WORKFLOW.md  HIGH_POLY_GEOMETRY.md  IMMEDIATE_ESSENTIALS.md  INCREMENTAL_PREVIEWS_AND_3D.md  INTERACTIVE_PREVIEWS.md  LEVELS.md  MATERIALS.md  MESH_INPUT_AND_RESOURCES.md  NODE_THUMBNAILS.md  NOISES.md  NOISE_EVOLUTION.md  (+93 more)
examples/: theme_template.json
tests/: adjustment_nodes_test.py  animation_aperture_playback_test.py  animation_performance_test.py  backend_test.py  blend_modes_test.py  blur_family_test.py  canvas_editor_qol_test.py  canvas_undo_workspace_test.py  colour_generator_srgb_test.py  coordinate_distortion_test.py  curve_editor_test.py  custom_nodes_test.py  dense_geometry_statistics_test.py  directional_lighting_test.py  (+115 more)
(+263 files in other folders)
